--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
 							<div class="mkdf-position-center-inner">
 								<div class="mkdf-logo-wrapper">
 									<a itemprop="url" href="#" style="height: 200px;">
-										<img itemprop="image" class="mkdf-normal-logo" src="imgs/logo.png" width="400" alt="logo" />
-										<img itemprop="image" class="mkdf-dark-logo" src="imgs/logo.png" width="400" alt="light logo" />
+										<img itemprop="image" class="mkdf-normal-logo" src="imgs/logo2.png" width="400" alt="logo" />
+										<img itemprop="image" class="mkdf-dark-logo" src="imgs/logo2.png" width="400" alt="light logo" />
 									</a>
 								</div>
 							</div>
