--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 										<li id="nav-menu-item-135" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children mkdf-active-item has_sub narrow">
 											<a href="#inicio" class=" current ">
 												<span class="item_outer">
-													<span class="item_text">hola</span>
+													<span class="item_text">Inicio</span>
 													<i class="mkdf-menu-arrow fa fa-angle-down"></i>
 												</span>
 											</a>
