COMMIT DE PRUEBA 2 SEBASTIAN

--- a/index.html
+++ b/index.html
@@ -872,10 +872,7 @@
 																		</a>
 																	</h5>
 																	<p class="mkdf-iwt-text">
-																		Las técnicas de masaje profundamente relajantes se combinan con el aroma 
-																		profundamente hipnótico de LUMINOUS Vibrational Oil para hacer de este 
-																		maravilloso masaje de hombros, cuello, cara y cuero cabelludo una experiencia 
-																		regenerativa como ninguna otra.
+																		COMMIT DE PRUEBA :( 
 																		<br/>
 																		<b>175 FR / Hora</b>
 																	</p>
