--- a/index.html
+++ b/index.html
@@ -668,10 +668,15 @@
 																		</div>
 																		<div class="tp-caption  " id="slide-37-layer-6" data-x="['center','center','center','center']" data-hoffset="['-105','-105','-105','0']" data-y="['middle','middle','middle','middle']" data-voffset="['202','195','77','99']" data-width="none" data-height="none" data-whitespace="nowrap" data-visibility="['on','on','on','off']" data-type="text" data-basealign="slide" data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":1100,"speed":1200,"frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Expo.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 8; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: #0a0a0a; letter-spacing: 0px;font-family:Open Sans;">
 																			<a itemprop="url" href="https://aviana.qodeinteractive.com/contact-us/" target="_blank" class="mkdf-btn mkdf-btn-medium mkdf-btn-outline">
-																				<span class="mkdf-btn-text">Contáctanos</span>
+																				<span class="mkdf-btn-text">Servicios</span>
+																				<span class="mkdf-btn-borders-holder">
+																					<span class="mkdf-btn-borders mkdf-border1"></span>
+																					<span class="mkdf-btn-borders mkdf-border2"></span>
+																					<span class="mkdf-btn-borders mkdf-border3"></span>
+																					<span class="mkdf-btn-borders mkdf-border4"></span>
+																				</span>
 																			</a>
 																		</div>
-
 
 																		<div class="tp-caption  " id="slide-37-layer-7" data-x="['center','center','center','center']" data-hoffset="['-665','0','-671','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-365','100','-292','2']" data-fontsize="['19','19','19','15']" data-lineheight="['35','34','34','25']" data-color="['rgb(144,144,144)','rgb(144,144,144)','rgb(68,68,68)','rgb(68,68,68)']" data-width="['447','464','438','316']" data-height="['none','69','none','none']" data-whitespace="normal" data-visibility="['off','on','off','off']" data-type="text" data-basealign="slide" data-responsive_offset="off" data-responsive="off" data-frames='[{"delay":800,"speed":1200,"frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Expo.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 10; min-width: 447px; max-width: 447px; white-space: normal; font-size: 19px; line-height: 35px; font-weight: 300; color: #909090; letter-spacing: 0px;font-family:Open Sans;">
 																			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod. Lorem ipsum dolor.
